--- a/Style/style.scss
+++ b/Style/style.scss
@@ -1,4 +1,3 @@
-/*Zeroing*/
 *{
   box-sizing: border-box;
   margin: 0;padding: 0;border: 0;
@@ -30,6 +29,7 @@ h1,h2,h3,h4,h5,h6{
 
 /*font-family: 'Poppins', sans-serif;*/ 
 
+// Colors and Variables
 $body__bg:linear-gradient(180deg, #333333 0%, #090707 11.98%);
 $white: #FFFFFF;
 $blue:#3775ED;
